update all the SJMD mailing list links

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -91,17 +91,15 @@
 <section id="sjmd-book-sign-up">
 	<div class="text-wrap">
 		<p>
-			👋 Hey! This is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll be writing and publishing an entry a day until it's done. <strong>Do you want to join the list for updates?</strong>
+			👋 Hey! This is part of a book that I (publicly!) wrote all throughout January about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. <strong>Do you want to join the list to get an email when it's coming out?</strong>
 		</p>
 		
 		<p>
-			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">How do I sign up?</a>
+			<a class="button" href="https://hues.ck.page/85cc4bc6f7" target="_blank" rel="noopener noreferrer">How do I sign up?</a>
 		</p>
 		<p>
-			<strong>You'll get the first 333 pages 👀 of the work-in-progress book (as of Jan. 26th) as a free downloadable .PDF 📩</strong>
+			Bonus: You'll get a .PDF of select chapters (over 100 pages 👀) of the work-in-progress book as soon as you sign up 📩
 		</p>
-		
-		<p class="small">You can choose your level of update-ness (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
 	</div>
 </section>
 {{ else }}
