--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -53,7 +53,7 @@
 					All the stuff I've made here &mdash; the words I've written, the doodles/artwork I've posted, and the videos or other content I've cobbled together &mdash; (unless otherwise noted), is uncopyrighted: it's my gift to you and the commons.
 				</p>
 				<p>
-					<a href="https://uncopyright.org/notice/?uwn=www.samkillermann.com&?uwc=Sam+Killermann" alt="Uncopyright Notice" class="button">View Uncopyright Notice</a>
+					<a href="https://uncopyright.org/notice/?uwn=www.samk.blog&?uwc=Sam+Killermann" alt="Uncopyright Notice" class="button">View Uncopyright Notice</a>
 				</p>
 			</div><!--/uncopyright-->
 			<div class="grid-cell pad">
@@ -90,7 +90,7 @@
 			</div>
 			<div class="grid-cell bigpad">
 				<article class="card">
-					<img class="card--image" src="https://www.samkillermann.com/wp-content/uploads/2018/12/sam-killermann-dot-com-100-pagespeed-score.jpg" alt="Image showing Google PageSpeed Score of 100">
+					<img class="card--image" src="https://www.samk.blog/wp-content/uploads/2018/12/sam-killermann-dot-com-100-pagespeed-score.jpg" alt="Image showing Google PageSpeed Score of 100">
 					<section class="pad">
 						<span class="primary-category">
 							meta af
