--- a/layouts/shortcodes/subscribe.html
+++ b/layouts/shortcodes/subscribe.html
@@ -5,6 +5,6 @@
         </h3> 
         <p><strong>Join the mailing list</strong>, get posts in your inbox, or subscribe in other ways to get the latest &amp; greatest.</p>
         
-        <a title="View Subscription Options" class="button" href="https://www.samkillermann.com/subscribe">Show me options.</a>
+        <a title="View Subscription Options" class="button" href="https://www.samk.blog/subscribe">Show me options.</a>
     </div>
 </div>
