--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
 	<h1 class="home-intro wrap"><span class="chameleon-color">Welcome!</span> 
 		<a href="/about/sam-killermann">I'm sK.</a> I mostly blog about <a href="/categories/better-humaning">better humaning</a>, <a href="/categories/technolophizing">technolophizing</a>, <a href="/categories/work-dot-com/">work dot com</a> &amp; <a href="/categories/adventravel">adventravel</a>, exploring themes like <a href="/topics/unhappiness">(un)happiness</a>, <a href="/topics/fear">fear</a>, <a href="/topics/activism">activism</a>, <a href="/topics/mindfulness">mindfulness</a>, &amp; <a href="/topics/" title="All Tags">more</a>. 
 	</h1>
-	<p class="home-intro wrap"><span class="chameleon-color">Right now,</span> I'm in the process of publicly writing <a href="/topics/sjmd-book" title="Social Justice, Minus Dogma Book Entries">a book about dogmatic activism</a>, with a new post every day (scroll down a little to see today's entry). You can get <a href="https://bit.ly/sjmdbook" target="_blank" rel="noopener noreferrer">email updates</a> on just that, if you'd like.</p>
+	<p class="home-intro wrap"><span class="chameleon-color">Recently,</span> I publicly wrote <a href="/topics/sjmd-book" title="Social Justice, Minus Dogma Book Entries">a new book about dogmatic activism</a>, with a new post every day on this blog for a month. Want word when it's published? <a href="https://problematicactivism.com" target="_blank" rel="noopener noreferrer">Sign up here.</a></p>
 	<p class="home-intro wrap" style="margin-bottom: 0;">I'm happy you're here. <a id="hide-welcome-message" href="" style="border: none; font-weight: 300; display: inline-block; font-size: .6em; padding: .2em;">Hide this message 🙈</a></p>
 </header>
 <script>
